fix: full width text input on smaller viewport sizes

--- a/src/components/global/header/headerLink.scss
+++ b/src/components/global/header/headerLink.scss
@@ -163,6 +163,14 @@ kyn-text-input {
 }
 
 @media (max-width: calc(42rem - 0.001px)) {
+  .menu__content .wrapper kyn-text-input,
+  .menu__content .wrapper ::slotted(kyn-text-input) {
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: calc(42rem - 0.001px)) {
   .menu {
     width: 100%;
 
